[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
tokio = { version = "1.39.3", features = ["full"] }
tower = "0.5.1"
serde = { version = "1.0.214", features = ["derive"] }
tracing-subscriber = "0.3.18"
futures = "0.3.31"
